--- a/assets/css/zi.css
+++ b/assets/css/zi.css
@@ -1,38 +1,48 @@
 body {
-  background-color: rgba(255,255,255,0.95);
-  height: 200vh;
+    background-color: rgba(255, 255, 255, 0.95);
+    height: 200vh;
 }
+
+/* main */
 
 .mainnav {
-  display: inline;
-  position: fixed;
-  height: 90px;
-  background-color: rgba(0,28,49,0.9);
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    position: fixed;
+    height: 90px;
+    background-color: rgba(0, 28, 49, 0.9);
 }
+.mainmargin {
+    padding: 0 15% 0 15%;
+}
+.leftmargin {
+    float: left;
+}
+.rightmargin {
+    float: right;
+}
+
+/* nav */
 
 .navitem {
-  display: inline-block;
-  height: 90px;
-  width: 70px;
-  text-align: center;
-  line-height: 90px;
-  color: #bbc3cf;
+    display: inline-block;
+    height: 90px;
+    width: 70px;
+    text-align: center;
+    line-height: 90px;
+    color: #bbc3cf;
 }
-
-.navitem:hover {
-  -webkit-transition-duration: 0.1s; /* Safari */
-  transition-duration: 0.1s;
-  color: #596474;
-}
-
 .navbutton {
-  display: inline-block;
-  text-align: center;
-  width: 150px;
-  height: 90px;
-  background-color: #1a8af3;
+    display: inline;
+    text-align: center;
+    width: 170px;
+    height: 90px;
+    background-color: #1a8af3;
 }
-
-.navrightmargin {
-  margin-right: 15%;
+.navitem:hover {
+    -webkit-transition-duration: 0.1s;
+    /* Safari */
+    transition-duration: 0.1s;
+    color: #596474;
 }
