--- a/assets/css/zi.css
+++ b/assets/css/zi.css
@@ -1,10 +1,11 @@
 #aftermain {
-    background: #1a8af3;
     /* fallback for old browsers */
-    background: -webkit-linear-gradient( top, #1a8af3, rgba(0, 28, 49, 0.95), rgba(0, 28, 49, 1));
+    /*background: -webkit-linear-gradient( top, #1a8af3, rgba(0, 28, 49, 0.95), rgba(0, 28, 49, 1));*/
     /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient( top, #1a8af3, rgba(0, 28, 49, 0.95), rgba(0, 28, 49, 1));
+    /*background: linear-gradient( top, #1a8af3, rgba(0, 28, 49, 0.95), rgba(0, 28, 49, 1));*/
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: -webkit-linear-gradient( top, hsl(206, 78%, 29%), rgba(0, 28, 49, 0.95), rgba(0, 28, 49, 1));
+    background: linear-gradient( top, hsl(206, 78%, 29%), rgba(0, 28, 49, 0.95), rgba(0, 28, 49, 1));
 }
 
 /* main */
@@ -41,6 +42,9 @@
     -webkit-justify-content: center;
     justify-content: center;
 }
+.font-mainkblue {
+    color: rgba(0, 28, 49, 1);
+}
 
 /*------------------------------------------*/
 
@@ -53,7 +57,8 @@
     position: fixed;
     height: 90px;
     z-index: 99;
-    background-color: rgba(255, 255, 255, 0.95);
+    /*background-color: rgba(255, 255, 255, 0.8);*/
+    background-color: rgba(0, 28, 49, 0);
     opacity: 0.95;
 }
 .navitem {
@@ -62,12 +67,13 @@
     padding-top: 5px;
     padding-right: 22px;
     line-height: 90px;
-    color: #bbc3cf;
+    color: #596474;
     cursor: pointer;
 }
 .navrightitem {
     display: block;
-    background-color: rgba(26, 138, 243, 1);
+    background-color: hsl(206, 78%, 29%);
+    /*background-color: #1a8af3;*/
     color: rgba(255, 255, 255, 0.9);
     padding-left: 10px;
     width: 190px;
@@ -83,7 +89,8 @@
     -webkit-transition-duration: 0.1s;
     /* Safari */
     transition-duration: 0.1s;
-    color: #596474;
+    /*color: #bbc3cf;*/
+    color: rgba(136, 150, 170, 1);
 }
 #navsignup {
     padding-left: 0px;
@@ -100,13 +107,14 @@
 /* landing */
 
 #landing {
-    background-color: rgba(255, 255, 255, 0.9);
+    background-color: rgba(0, 28, 49, 0.15);
     height: 90vh;
 }
 .section1-content {
     display: inline;
     height: 90vh;
-    padding-top: 100px;
+    position: relative;
+    top: 20px;
 }
 
 /*畫圓*/
@@ -120,6 +128,19 @@
     background-color: rgba(255, 255, 255, 1);
     border: initial;
 }
+.left-Content {
+    position: absolute;
+    top: 100px;
+}
+.countdown-txt {
+    -webkit-flex: 1;
+    flex: 1;
+}
+.dropdownDiv {
+    position: absolute;
+    top: 90vh;
+    margin-top: -20px;
+}
 .dropdownContent {
     float: left;
     transform: translateY(-50%);
@@ -128,6 +149,20 @@
 .dropdown {
     font-size: 18px;
     color: rgba(34, 43, 51, 0.8);
+}
+.right-Content {
+    position: relative;
+    top: 95px;
+    left: 235px;
+}
+.landingimg-Div {
+    position: relative;
+    top: -0.5vh;
+    left: -118px;
+}
+.landingimg {
+    width: 548px;
+    height: 548px;
 }
 
 /*------------------------------------------*/
@@ -165,7 +200,7 @@
     height: 100px;
 }
 .cardborder {
-    border-bottom: 6px solid #1a8af3;
+    border-bottom: 4px solid #1a8af3;
 }
 
 /*------------------------------------------*/
@@ -185,6 +220,17 @@
 #noticecard {
     height: 450px;
     border-left: 6px solid #1a8af3;
+}
+table, td, th {
+    border: 2px solid rgba(8, 79, 145, 0.5);
+    text-align: left;
+}
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+th, td {
+    padding: 15px;
 }
 
 /* signup */
@@ -207,6 +253,4 @@
     margin-top: 100px;
     background-color: rgba(255, 255, 255, 0.9);
     border-left: 6px solid #1a8af3;
-}
-
 }
